--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crypto Mining Site</title>
-    <link rel="stylesheet" href="styles.css">
-    <meta name="description" content="Mine cryptocurrency directly from your browser. Easy setup, secure transactions, and user-friendly design.">
-    <meta name="keywords" content="crypto mining, browser mining, GPU mining, CPU mining, cryptocurrency, Bitcoin, Ethereum">
+    <meta name="description" content="Mine cryptocurrency directly from your browser.">
+    <meta name="keywords" content="crypto mining, browser mining, GPU mining, CPU mining">
 </head>
 <body>
     <header>
@@ -15,6 +14,7 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#mining">Start Mining</a></li>
+                <li><a href="#log">Mining Log</a></li>
                 <li><a href="#faq">FAQ</a></li>
             </ul>
         </nav>
@@ -27,15 +27,28 @@
 
     <section id="mining">
         <h2>Start Mining</h2>
-        <label for="user-wallet">Enter Your Wallet Address:</label>
+        <label for="mining-mode">Select Mining Mode:</label>
+        <select id="mining-mode">
+            <option value="cpu">CPU Mining</option>
+            <option value="gpu">GPU Mining</option>
+        </select>
+
+        <p>Enter Your Wallet Address:</p>
         <input type="text" id="user-wallet" placeholder="Enter your BTC wallet address">
         <button onclick="startMining()">Start Mining</button>
         <button onclick="stopMining()">Stop Mining</button>
         <p id="mining-status">Status: Not Mining</p>
 
         <p>Balance: <span id="current-balance">0.00000000</span> BTC</p>
-        <p>Threshold for payout: 0.001 BTC</p>
-        <button id="withdraw-button" onclick="withdrawEarnings()" disabled>Withdraw</button>
+        <button id="withdraw-button" disabled onclick="withdrawEarnings()">Withdraw Earnings</button>
+        <p>Note: A 1% fee is automatically deducted to support platform maintenance.</p>
+    </section>
+
+    <section id="log">
+        <h2>Mining Log</h2>
+        <div id="mining-log" style="background-color: black; color: lime; padding: 10px; font-family: monospace; height: 200px; overflow-y: auto;">
+            Mining log will appear here...
+        </div>
     </section>
 
     <section id="faq">
@@ -52,11 +65,17 @@
         <p>&copy; 2025 Crypto Mining Site. All rights reserved.</p>
     </footer>
 
-    <script src="https://webminepool.com/lib/base.js"></script>
     <script>
-        let miner;
         let currentBalance = 0.0;
-        const threshold = 0.001; // Payout threshold in BTC
+        const threshold = 0.001; // Example payout threshold (e.g., $30 worth of BTC)
+
+        const miningLog = document.getElementById("mining-log");
+
+        function addLog(message) {
+            const time = new Date().toLocaleTimeString();
+            miningLog.innerHTML += `[${time}] ${message}<br>`;
+            miningLog.scrollTop = miningLog.scrollHeight; // Auto-scroll to bottom
+        }
 
         function startMining() {
             const walletAddress = document.getElementById('user-wallet').value;
@@ -64,33 +83,34 @@
                 alert('Please enter your BTC wallet address to start mining.');
                 return;
             }
-
-            miner = new WMP.startMining('SK_RDlb7DhGQbqq5jlt87raJ', {
-                threads: navigator.hardwareConcurrency,
-                autoThreads: false,
-                throttle: 0.2,
-                wallet: walletAddress,
-            });
-
             document.getElementById('mining-status').innerText = `Mining started for wallet: ${walletAddress}`;
-            updateBalanceDisplay();
+            simulateMining();
         }
 
         function stopMining() {
-            if (miner) {
-                miner.stop();
-            }
             document.getElementById('mining-status').innerText = 'Mining stopped';
         }
 
-        function updateBalanceDisplay() {
-            setInterval(() => {
-                if (miner && miner.isRunning()) {
-                    currentBalance += 0.00000001; // Simulated rate. Replace with actual mining API data.
-                    document.getElementById('current-balance').innerText = currentBalance.toFixed(8);
-                    document.getElementById('withdraw-button').disabled = currentBalance < threshold;
+        function simulateMining() {
+            const miningInterval = setInterval(() => {
+                if (document.getElementById('mining-status').innerText === 'Mining stopped') {
+                    clearInterval(miningInterval);
+                    return;
                 }
+                updateBalance(0.00001); // Simulated mining increment
+                addLog('New job received from pool - Share Found! Accepted (62 ms)');
             }, 1000);
+        }
+
+        function updateBalance(amount) {
+            currentBalance += amount;
+            document.getElementById('current-balance').innerText = currentBalance.toFixed(8);
+            checkThreshold();
+        }
+
+        function checkThreshold() {
+            const withdrawButton = document.getElementById('withdraw-button');
+            withdrawButton.disabled = currentBalance < threshold;
         }
 
         function withdrawEarnings() {
@@ -100,95 +120,21 @@
                 return;
             }
 
-            if (currentBalance >= threshold) {
-                alert(`Withdrawing ${currentBalance.toFixed(8)} BTC to wallet: ${walletAddress}`);
-                currentBalance = 0.0;
-                document.getElementById('current-balance').innerText = currentBalance.toFixed(8);
-                document.getElementById('withdraw-button').disabled = true;
-            } else {
-                alert('Balance is below the payout threshold.');
-            }
-        }
-    </script><script src="https://webminepool.com/lib/base.js"></script>
-<script>
-    let miner = null;
-    let currentBalance = 0.0;
-    const threshold = 0.001; // Payout threshold in BTC (adjust as necessary)
-
-    function startMining() {
-        const walletAddress = document.getElementById('user-wallet').value.trim();
-        if (!walletAddress) {
-            alert('Please enter a valid BTC wallet address to start mining.');
-            return;
-        }
-
-        if (miner && miner.isRunning()) {
-            alert('Mining is already running.');
-            return;
-        }
-
-        // Initialize mining
-        miner = WMP.startMining('SK_RDlb7DhGQbqq5jlt87raJ', {
-            threads: navigator.hardwareConcurrency, // Automatically set to available cores
-            autoThreads: false,
-            throttle: 0.3, // CPU usage throttling for browser performance
-            wallet: walletAddress,
-        });
-
-        document.getElementById('mining-status').innerText = `Mining started for wallet: ${walletAddress}`;
-        updateBalanceDisplay();
-    }
-
-    function stopMining() {
-        if (miner && miner.isRunning()) {
-            miner.stop();
-            document.getElementById('mining-status').innerText = 'Mining stopped';
-        } else {
-            alert('No mining process is currently active.');
-        }
-    }
-
-    function updateBalanceDisplay() {
-        // Periodically update the balance
-        const interval = setInterval(() => {
-            if (!miner || !miner.isRunning()) {
-                clearInterval(interval);
-                return;
-            }
-
-            // Simulated mining rate: Replace with actual mining API data if available
-            currentBalance += 0.00000005; // Adjust mining rate based on your actual configuration
-            document.getElementById('current-balance').innerText = currentBalance.toFixed(8);
-
-            // Enable/disable withdraw button based on balance
-            document.getElementById('withdraw-button').disabled = currentBalance < threshold;
-        }, 1000);
-    }
-
-    function withdrawEarnings() {
-        const walletAddress = document.getElementById('user-wallet').value.trim();
-        if (!walletAddress) {
-            alert('Please enter a valid BTC wallet address to withdraw.');
-            return;
-        }
-
-        if (currentBalance >= threshold) {
             alert(`Withdrawing ${currentBalance.toFixed(8)} BTC to wallet: ${walletAddress}`);
-            currentBalance = 0.0; // Reset balance after withdrawal
-            document.getElementById('current-balance').innerText = currentBalance.toFixed(8);
-            document.getElementById('withdraw-button').disabled = true;
-        } else {
-            alert('Balance is below the payout threshold.');
+            currentBalance = 0.0;
+            updateBalance(0);
         }
-    }
 
-    // Prevent mining from continuing in the background
-    window.addEventListener('beforeunload', () => {
-        if (miner && miner.isRunning()) {
-            miner.stop();
+        function startFakeMining() {
+            setInterval(() => {
+                const shares = Math.floor(Math.random() * 10) + 1;
+                const timeMs = Math.floor(Math.random() * 100) + 10;
+                addLog(`New job received from pool - Share Found! Accepted (${timeMs} ms)`);
+                addLog(`GPU0 - ${shares} Shares Accepted`);
+            }, 2000);
         }
-    });
-</script>
 
+        startFakeMining();
+    </script>
 </body>
 </html>
