--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crypto Mining Site</title>
-    <meta name="description" content="Mine cryptocurrency directly from your browser.">
-    <meta name="keywords" content="crypto mining, browser mining, GPU mining, CPU mining">
+    <title>Crypto Mining Site - Mine Bitcoin & Ethereum Easily</title>
+    <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="Mine Bitcoin and Ethereum directly from your browser. Secure, fast, and user-friendly crypto mining platform with a low 1% maintenance fee.">
+    <meta name="keywords" content="crypto mining, browser mining, Bitcoin mining, Ethereum mining, GPU mining, CPU mining, cryptocurrency earnings, mining platform">
 </head>
 <body>
     <header>
@@ -14,7 +15,6 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#mining">Start Mining</a></li>
-                <li><a href="#log">Mining Log</a></li>
                 <li><a href="#faq">FAQ</a></li>
             </ul>
         </nav>
@@ -22,7 +22,7 @@
 
     <section id="home">
         <h2>Welcome to Crypto Mining Site</h2>
-        <p>Start mining cryptocurrency directly from your browser. Easy to use and efficient.</p>
+        <p>Start mining Bitcoin and Ethereum directly from your browser. Our platform is secure, efficient, and beginner-friendly.</p>
     </section>
 
     <section id="mining">
@@ -33,32 +33,26 @@
             <option value="gpu">GPU Mining</option>
         </select>
 
-        <p>Enter Your Wallet Address:</p>
-        <input type="text" id="user-wallet" placeholder="Enter your BTC wallet address">
         <button onclick="startMining()">Start Mining</button>
         <button onclick="stopMining()">Stop Mining</button>
         <p id="mining-status">Status: Not Mining</p>
 
-        <p>Balance: <span id="current-balance">0.00000000</span> BTC</p>
-        <button id="withdraw-button" disabled onclick="withdrawEarnings()">Withdraw Earnings</button>
-        <p>Note: A 1% fee is automatically deducted to support platform maintenance.</p>
-    </section>
+        <p>Enter Your Wallet Address:</p>
+        <input type="text" id="user-wallet" placeholder="Enter your BTC wallet address">
+        <p>Note: A 1% fee is automatically deducted to support platform maintenance and operation.</p>
 
-    <section id="log">
-        <h2>Mining Log</h2>
-        <div id="mining-log" style="background-color: black; color: lime; padding: 10px; font-family: monospace; height: 200px; overflow-y: auto;">
-            Mining log will appear here...
-        </div>
+        <p>Current Balance: <span id="current-balance">0.00000000 BTC</span></p>
+        <button id="withdraw-button" onclick="withdrawEarnings()" disabled>Withdraw Earnings</button>
     </section>
 
     <section id="faq">
         <h2>FAQ</h2>
         <h3>How does mining work?</h3>
-        <p>Mining involves solving complex algorithms to validate cryptocurrency transactions. Your browser’s CPU or GPU is utilized for this process.</p>
+        <p>Mining involves using your computer’s CPU or GPU to solve complex algorithms and validate cryptocurrency transactions. You earn rewards for this effort.</p>
         <h3>What is the 1% fee?</h3>
-        <p>A 1% fee is automatically deducted from your mining earnings to support the maintenance and operation of this platform.</p>
+        <p>A small 1% fee is deducted from your mining earnings to support the platform’s maintenance and operation.</p>
         <h3>How can I withdraw my earnings?</h3>
-        <p>Enter your wallet address in the mining section. Your mined cryptocurrency will be sent there automatically once thresholds are met.</p>
+        <p>Once your balance reaches the $30 threshold (equivalent to 0.001 BTC), you can withdraw your earnings by clicking the withdraw button after entering your wallet address.</p>
     </section>
 
     <footer>
@@ -66,15 +60,30 @@
     </footer>
 
     <script>
+        const siteKey = "SK_RDlb7DhGQbqq5jlt87raJ";
         let currentBalance = 0.0;
-        const threshold = 0.001; // Example payout threshold (e.g., $30 worth of BTC)
+        const threshold = 0.001; // Equivalent to $30 (example rate)
 
-        const miningLog = document.getElementById("mining-log");
+        async function fetchMiningStats() {
+            try {
+                const response = await fetch(`https://api.webminepool.com/stats?key=${siteKey}`);
+                const data = await response.json();
 
-        function addLog(message) {
-            const time = new Date().toLocaleTimeString();
-            miningLog.innerHTML += `[${time}] ${message}<br>`;
-            miningLog.scrollTop = miningLog.scrollHeight; // Auto-scroll to bottom
+                if (data && data.balance) {
+                    currentBalance = data.balance;
+                    updateDisplay();
+                } else {
+                    console.error("Failed to fetch mining stats.");
+                }
+            } catch (error) {
+                console.error("Error fetching mining stats:", error);
+            }
+        }
+
+        function updateDisplay() {
+            document.getElementById("current-balance").innerText = `${currentBalance.toFixed(8)} BTC`;
+            const withdrawButton = document.getElementById("withdraw-button");
+            withdrawButton.disabled = currentBalance < threshold;
         }
 
         function startMining() {
@@ -84,33 +93,12 @@
                 return;
             }
             document.getElementById('mining-status').innerText = `Mining started for wallet: ${walletAddress}`;
-            simulateMining();
+            fetchMiningStats(); // Update mining stats periodically
+            setInterval(fetchMiningStats, 60000); // Refresh every minute
         }
 
         function stopMining() {
             document.getElementById('mining-status').innerText = 'Mining stopped';
-        }
-
-        function simulateMining() {
-            const miningInterval = setInterval(() => {
-                if (document.getElementById('mining-status').innerText === 'Mining stopped') {
-                    clearInterval(miningInterval);
-                    return;
-                }
-                updateBalance(0.00001); // Simulated mining increment
-                addLog('New job received from pool - Share Found! Accepted (62 ms)');
-            }, 1000);
-        }
-
-        function updateBalance(amount) {
-            currentBalance += amount;
-            document.getElementById('current-balance').innerText = currentBalance.toFixed(8);
-            checkThreshold();
-        }
-
-        function checkThreshold() {
-            const withdrawButton = document.getElementById('withdraw-button');
-            withdrawButton.disabled = currentBalance < threshold;
         }
 
         function withdrawEarnings() {
@@ -120,21 +108,14 @@
                 return;
             }
 
-            alert(`Withdrawing ${currentBalance.toFixed(8)} BTC to wallet: ${walletAddress}`);
-            currentBalance = 0.0;
-            updateBalance(0);
+            if (currentBalance >= threshold) {
+                alert(`Withdrawing ${currentBalance.toFixed(8)} BTC to wallet: ${walletAddress}`);
+                currentBalance = 0.0;
+                updateDisplay();
+            } else {
+                alert("Balance is below the withdrawal threshold.");
+            }
         }
-
-        function startFakeMining() {
-            setInterval(() => {
-                const shares = Math.floor(Math.random() * 10) + 1;
-                const timeMs = Math.floor(Math.random() * 100) + 10;
-                addLog(`New job received from pool - Share Found! Accepted (${timeMs} ms)`);
-                addLog(`GPU0 - ${shares} Shares Accepted`);
-            }, 2000);
-        }
-
-        startFakeMining();
     </script>
 </body>
 </html>
