--- a/index.html
+++ b/index.html
@@ -4,9 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crypto Mining Site</title>
-    <link rel="stylesheet" href="styles.css">
     <meta name="description" content="Mine cryptocurrency directly from your browser. Easy setup, secure transactions, and user-friendly design.">
     <meta name="keywords" content="crypto mining, browser mining, GPU mining, CPU mining, cryptocurrency, Bitcoin, Ethereum">
+
+    <!-- Inline CSS -->
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
+        }
+        header, footer {
+            background-color: #222;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+        }
+        nav ul {
+            list-style: none;
+            padding: 0;
+        }
+        nav ul li {
+            display: inline;
+            margin: 0 10px;
+        }
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+        }
+        section {
+            padding: 20px;
+        }
+        #mining-log {
+            width: 100%;
+            height: 150px;
+            margin-top: 10px;
+        }
+        button {
+            margin: 5px;
+        }
+    </style>
 </head>
 <body>
     <header>
